--- a/mystyle.css
+++ b/mystyle.css
@@ -3,7 +3,8 @@ body {
   }
   
   h1 {
-    color: darkgray;
+    color: rgb(87, 85, 85);
+    font-family: copperplate;
     text-align: center;
   }
 
