--- a/fanmusicstyle.css
+++ b/fanmusicstyle.css
@@ -17,10 +17,24 @@
 }
 
 h1 {
-    font-size: 40px
+    font-size: 45px
 }
 
 body {
     background-color: rgb(223, 252, 223);
   }
 
+.links {
+    background-color: whitesmoke;
+    padding: 1px;    
+    text-align: center;
+}
+
+.pics {
+    display: flex;
+  }
+  
+.picture {
+    flex: 33.33%;
+    padding: 5px;
+  }
