--- a/fanbiostyle.css
+++ b/fanbiostyle.css
@@ -24,3 +24,9 @@ h1 {
 body {
     background-color: rgb(241, 184, 184);
   }
+
+.links {
+    background-color: whitesmoke;
+    padding: 1px;    
+    text-align: center;
+}
