--- a/assignment7style.css
+++ b/assignment7style.css
@@ -1,10 +1,11 @@
+
 h1 {
     font-size: 45px;
     text-align: center;
   }
 
 #thereminZone {
-    background: linear-gradient(90deg, rgba(184,225,230,1) 0%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(90deg, rgb(192, 184, 230) 0%, rgb(78, 56, 185) 100%);
     height: 200px;
     width: 100%;
     border-style: none;
