--- a/final_project/finalproject.css
+++ b/final_project/finalproject.css
@@ -13,6 +13,19 @@ h2 {
   text-align: center;
 }
 
+h3 {
+  font-size: 20px;
+  margin-bottom: 0px;
+  text-align: center;
+}
+
+h4 {
+  font-size: 20px;
+  font-weight: normal;
+  margin: 0px;
+  text-align: center;
+}
+
 fieldset {
   background-color: whitesmoke;
   width: 75%;
@@ -43,4 +56,13 @@ fieldset {
   font-size: 20px;
   margin: 4px 2px;
   cursor: pointer;
+  border-radius: 8px;
+  box-shadow: 0 0px 6px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+}
+
+.button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
